--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+ 
+server.port = 8088
 
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+
+spring.datasource.url=jdbc:mysql://localhost:7830/test?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=7830
+
+logging.level.com.jks.firstweb=DEBUG
