--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "test": "npm run test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
