--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vuelidate": "^0.7.5",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
