--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.url=jdbc:mysql://localhost:7830/test?useUnicode=yes&characterE
 spring.datasource.username=root
 spring.datasource.password=7830
 
-logging.level.com.jks.firstweb=DEBUG
+logging.level.com.taskagile=DEBUG
